# clavicode-backend

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  Dockerfile  README.md  context.txt  jasmine.json  nodemon.json  package.json  tsconfig.json  webpack.config.js
docs/: api.md
scripts/: create_pyvenv.sh  start_pyright.sh
spec/: compile.ts  debug.ts  debugTest.cpp  oj.spec.ts
src/: api.d.ts  api.ts  compile_handler.ts  constant.ts  debug.ts  errorHandler.ts  file_DB.ts  file_execution.ts  gdb_interface.ts  getHeaderFileHandler.ts  get_header_file_handler.ts  index.ts  interactive_execution.ts  language_server.ts  sandbox_interface.ts  user_system.ts
src/cpp/: compile.ts  debug.ts  get_header_file_handler.ts  index.ts
src/db/: file.ts  user.ts  utils.ts
src/executions/: file.ts  file_execution.ts  interactive.ts  interactive_execution.ts
src/helpers/: db.js  db.ts
src/oj/: fetch.ts  index.ts
src/sandbox/: .clang-format  .gitignore  CMakeLists.txt  README.md  binding.gyp  configure.sh  index.ts
src/sandbox/src/: child.cpp  child.h  config.h  main.cpp  runner.cpp  runner.h
src/sandbox/test/: Makefile  abort.cpp  chat.cpp  echo.cpp  read.cpp  sleep.cpp  system.cpp  write.cpp
src/utils/: .gitignore  Makefile  README.md
src/utils/scripts/: python_lsp.py
src/utils/src/: pause.c  sleep_n_rm.c
src/ws/: index.ts  language_server.ts
test/: compile.ts
